--- a/allifmaaladminapp/templates/allifmaaladminapp/home/home.html
+++ b/allifmaaladminapp/templates/allifmaaladminapp/home/home.html
@@ -114,11 +114,8 @@
 <!--we can insert the other section here-->
 
   
-<div class="imgcontainer">
-<img src="{% static 'allifmaaladminapp/css/images/allifmaal-icon.png' %}" alt="Allifmaal">
-
- <!--in the table below ensure it has classes like normal tables-->
- 
+<div class="allif-admin-img-container">
+<img src="{% static 'allifapperp/css/images/allifmaal-icon.png' %}" alt="Allifmaal" class="admin-home-image">
 </div>
 
 </div><!--end of main container of the page-->
