--- a/allifmaaladminapp/templates/allifmaaladminapp/users/users.html
+++ b/allifmaaladminapp/templates/allifmaaladminapp/users/users.html
@@ -1,4 +1,4 @@
-{% extends 'allifmaaladminapp/base/uimainbase/allifmaaluibase.html'%}
+{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
 {% load humanize %}
 {% block title %}
 {{title}}
@@ -7,6 +7,7 @@
 {%endblock%}
 {% block body %}
 
+<div class="allifmaal-main-container">
 <!--start....main headere-->
 <div class="card-header">
   <div class="row mt-12" ><!--start....header row-->
@@ -14,7 +15,7 @@
   <div class="container-fluid amel-content-header">
     <div class="dropdown allifmaal-content-dropdown">
       <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Open Filters
+      Filters
       </a>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
         <div class="content-dropdown-menu">
@@ -24,36 +25,17 @@
           placeholder="Type Here ...">
           <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
           </form>
-          <hr>
-
-        <li><a class="dropdown-item">Select Ordering Option</a></li>
-        <form method='POST' action="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
-      
-        <div>
-        <select name="requiredformat" class="form-control">
-          {% for item in datasorts %}
-          <option>{{item.name}}</option>
-           {% endfor %}
-          </select>
-          </div>
-          <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-      </form>
-  
+        
       </div>
       </ul>
     </div>
-
+    
     <a class="amel-table-list-identifier">Users:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
 
     <a href="{% url 'allifmaaladminapp:adminappHome' user_var glblslug %}">Admin Home</a>
     <a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">HRM</a>
-    <a href="{% url 'allifmaalusersapp:changeYourUserPassword' %}">Change Password</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddUser' user_var glblslug %}">New Staff</a>
-    <a href="{% url 'allifmaalcommonapp:commonSalaries' user_var glblslug %}">Payroll</a>
-    <a href="{% url 'allifmaalcommonapp:commonStaffProfiles' user_var glblslug %}">Profiles</a>
-    <a href="{% url 'allifmaalcommonapp:commonAddStaffProfile' user_var glblslug %}" >New Profile </a>
-
+    
   <div class="dropdown allifmaal-content-dropdown">
     <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
     Modules
@@ -67,69 +49,99 @@
     </div>
     </ul>
   </div>
-  <a href="{% url 'allifmaalcommonapp:commonCompanies' user_var glblslug %}">Companies</a>
+ 
   <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}">Suppliers</a>
-  </div>
-      </div><!--end....header column-->
-    
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
 
+
+  </div>
+    </div><!--end....header column-->
+    </div><!--end....header row-->
+  </div><!--end....main headere-->
 
 <div class="allifmaincontainer">
 <div class="row mt-12"> <!--start....table row-->
   <div class="col-md-12"> <!--start....table column-->
-  <div class="allif-scroll-table"> 
+  <div class="allif-scroll-table">
+    <div class="table-responsive allif-full-table">
     <table class="table table-layout">
-    <thead>
-      <tr class="allif-table-header-row" >
-        <td>User Name</td>
-        <td>User Email</td>
-        <td>User Role</td>
-        <td>Allifmaal Admin</td>
+      <thead>
+        <tr class="allif-table-header-row">
+        <td class="allif-fix-table-col">Name</td>
         
-      </tr>
-      </thead>
-      <tbody class="allif-table-body">
-      {% for item in users %}
-      <tr>
-        <td>
-          <a href="{% url 'allifmaaladminapp:adminappUserDetails' item.id user_var glblslug %}" class="allif-table-links">
-         {{item.first_name}}
-          </a>
-        </td>
-        <td>
-          {{item.email}}
-        </td>
-        <td>{{item.user_category}}</td>
-        <td>
-          <a href="{% url 'allifmaalcommonapp:commonUserAllifaamlAdmin' item.id %}">
-            {{item.allifmaal_admin}}
-          </a>
-        </td>
+        <td>Email</td>
+        <td>Superuser</td>
+        <td>Role</td>
        
+        <td>Navigate</td>
+        
+        <td> . . . </td>
+        <td></td>
+        </tr>
+        </thead>
+        <tbody class="allif-table-body">
+         
+        
+        {% for item in allifqueryset %} 
+        <tr data-id="{{item.id}}">
+        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaaladminapp:adminappUserDetails' item.id user_var glblslug %}">{{item.first_name}}</a></td>
+        <td>{{item.email}}</td>
+        {% if item.is_superuser %}
+        <td id="allif-superuser-row">
+          {{item.is_superuser}}
+        </td>
+        {% else %}
+        <td>
+          {{item.is_superuser}}
+        </td>
+        {% endif %}
+        <td>{{item.user_category}}</td>
+       
+        <td>
+          <div class="dropdown allifmaal-content-dropdown">
+            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Actions</a>
+            <div class="dropdown-content">
+              <a href="{% url 'allifmaalcommonapp:commonUserAllifaamlAdmin' item.id %}" class="dropdown-item" id="allif-table-drop-item-link">Allifmaal Admin <span> | </span> {{item.allifmaal_admin}}</a>
+              <a href="{% url 'allifmaalusersapp:changeUserToSupperuserByAdmin' item.id %}" class="dropdown-item" id="allif-table-drop-item-link-delete">Superuser<span> | </span> {{item.is_superuser}}</a>
+              
+            </div>
+          </div>
+          <div class="dropdown allif-confirm-action">
+            
+            <a href="{% url 'allifmaalcommonapp:commonDataSorts' user_var glblslug %}" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
+            <a href="{% url 'allifmaalcommonapp:commonDeleteDataSort' item.id %}" id="allif-confirm-delete">Confirm</a>
+          </div>
+
+         
+        </td>
+
+       <td> . . . </td>
+       <td></td>
       </tr>
       {% endfor %}
-    </tbody>
-  </table>
-
-
-
-
-</div>
+      </tbody>
+    </table>
+    </div>
+   </div>
 
 </div><!--end....table column-->
 
 </div><!--end....table row-->
 
-<!--end of table-->
 
-</div><!--end of main container of the page....-->
-
+</div>
+</div>
   {% block scripts %}
  
   {% endblock %}
-  
-   {% endblock %}
-   
+  {% endblock %}
+
+
+
+
+
+
+
+
+
+
+
