--- a/allifmaalcommonapp/templates/allifmaalcommonapp/scopes/scopes.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/scopes/scopes.html
@@ -1,5 +1,4 @@
-  
- {% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
+{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
 {% load humanize %}
 {% block title %}
 {{title}}
@@ -8,148 +7,127 @@
 {%endblock%}
 {% block body %}
 
-
+<div class="allifmaal-main-container">
 <!--start....main headere-->
 <div class="card-header">
-
   <div class="row mt-12" ><!--start....header row-->
-  
   <div class="col-md-12"><!--start....header column-->
-  
   <div class="container-fluid amel-content-header">
-    <a class="amel-table-list-identifier">{{title}}</a>
+    <a class="amel-table-list-identifier">Sectors:</a>
     <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-  
-  
-  <a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">HRM</a>
-  <a href="{% url 'allifmaaladminapp:adminappHome' user_var glblslug %}"> Admin Home</a>
-  <a href="{% url 'allifmaalcommonapp:commonCompanies' user_var glblslug %}">Companies </a>
+    <a href="{% url 'allifmaaladminapp:adminappHome' user_var glblslug %}"> Admin Home</a>
+    <a href="{% url 'allifmaalcommonapp:commonSectors' user_var glblslug %}">Sectors </a>
+    <a href="{% url 'allifmaalcommonapp:dynamic_form_view' %}">Dynamic form</a>
 
-<a href="{% url 'allifmaalcommonapp:commonSectors' user_var glblslug %}">Sectors </a>
-
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Accounts
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonGeneralLedgers' user_var glblslug %}">GL Accounts</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonChartofAccounts' user_var glblslug %}">Chart of A/Cs</a></li>
-      
-      </div>
-    </ul>
-  </div>
-  <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}" >Suppliers</a>
-  <div class="dropdown allifmaal-content-dropdown">
-    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-    Banks
-    </a>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-      <div class="content-dropdown-menu">
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a></li>
-      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Deposits</a>
-        </li>
-      <li><a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a></li>
-      </div>
-    </ul>
-  </div>
-  <a href="{% url 'allifmaalcommonapp:commonDepartments' user_var glblslug %}">Departments</a>
-  </div>
-  
-      </div><!--end....header column-->
     
-    </div><!--end....header row-->
-  
-  </div><!--end....main headere-->
-      
+    <a class="allif-load-content-button" type="button">Load Sectors</a>
 
+  <div class="dropdown allifmaal-content-dropdown">
+    <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+    Modules
+    </a>
+    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+      <div class="content-dropdown-menu">
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}">Customers</a></li>
+      <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}">Suppliers</a></li>
+    </div>
+    </ul>
+  </div>
+  <a href="{% url 'allifmaalcommonapp:commonCompanies' user_var glblslug %}">Company</a>
+  
+  </div>
+    </div><!--end....header column-->
+    </div><!--end....header row-->
+  </div><!--end....main headere-->
 
 <div class="allifmaincontainer">
-
- 
-  <div class="row mt-12"> <!--start....table row-->
-    
-
+<div class="row mt-12"> <!--start....table row-->
   <div class="col-md-12"> <!--start....table column-->
-    <div class="allif-scroll-table"> 
-     
-      <table class="table table-layout">
+  <div class="allif-scroll-table">
+    <div class="table-responsive allif-full-table">
+    <table class="table table-layout">
       <thead>
         <tr class="allif-table-header-row">
-          <td>Scope Description</td>
-          <td>Scope Company</td>
-          <td>Created By</td>
+        <td class="allif-fix-table-col">Scope</td>
+        <td>Comments</td>
+        <td>Created By</td>
+        <td>Date</td>
+        <td>Navigate</td>
         
-          <td>Added Date</td>
-          <td>Delete Scope</td>
-         
+        <td> . . . </td>
+        <td></td>
         </tr>
         </thead>
         <tbody class="allif-table-body">
-        {% for item in scopes %} 
-        <tr>
-          <td>
-            <a href="{% url 'allifmaalcommonapp:commonEditCompanyScope' item.id user_var glblslug %}" class="allif-table-links">
-           {{item.name}}
-           </a>
-          </td>
-          <td>
-            {{item.company}}
-            
-           </td>
-          <td>
-            {{item.owner}}
-            
-           </td>
+         
         
-          <td>
-           {{item.date|date:'d/m/Y'}}
-          </td>
-          
-          <td>
-            <a href="{% url 'allifmaalcommonapp:commonWantToDeleteScope' item.id user_var glblslug %}" class="body-delete-link">
-           Delete Scope
-           </a>
-          </td>
-        </tr>
-        {% endfor %}
+        {% for item in allifqueryset %} 
+        <tr data-id="{{item.id}}">
+        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonSectorDetails' item.id user_var glblslug %}">{{item.name}}</a></td>
+        <td>{{item.comments}}</td>
+        <td>{{item.owner}}</td>
+        <td>{{item.date|date:'d/m/Y'}}</td>
+       
+        <td>
+          <div class="dropdown allifmaal-content-dropdown">
+            <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
+            <div class="dropdown-content">
+              <a href="{% url 'allifmaalcommonapp:commonEditCompanyScope' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete</a>
+              
+            </div>
+          </div>
+          <div class="dropdown allif-confirm-action">
+            
+            <a href="{% url 'allifmaalcommonapp:commonAddCompanyScope' user_var glblslug %}" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
+            <a href="{% url 'allifmaalcommonapp:commonDeleteCompanyScope' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+          </div>
 
+
+
+
+        </td>
+
+       <td> . . . </td>
+       <td></td>
+      </tr>
+      {% endfor %}
       </tbody>
     </table>
-  
-  </div>
-  
-    
-    <div class="allif-form-container">
-      <div class="table-content-description"> Add New Scope </div>
-    <form method='POST' action=''>{% csrf_token %}
-    <div class="row"><!--start of row div --->
-        
-        <div class="card shadow text-left p-3 allif-form-card" >
-        <label>Scope Description</label> {{form.name}} 
-        <label>Notes</label>{{form.notes}}
-        
-        <br>
-        <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn">
-        
-        </div>
-    
-        </div>
-    </form>
-        
-        </div><!--end of row div --->
+    </div>
+   </div>
 
-  
-  
-  </div><!--end....table column-->
+</div><!--end....table column-->
+
 </div><!--end....table row-->
-<br>
-<!--end of table-->
+
+<div class="allif-form-container">
+<div class="table-content-description"> Add New Scope </div>
+<div class="allif-scroll-table">
+  <div class="table-responsive allif-full-table">
+  <table class="table table-layout">
+    <tbody class="allif-table-body">
+    <tr>
+      <form method='POST' action=''>{% csrf_token %}
+      <td>{{form.name}}</td>
+      <td>{{form.comments}}</td>
+      
+       <td><input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
+      </form>
+    </tr>
+    </tbody>
+  </table>
+  </div>
+ </div>
+  </div><!--end of row div --->
 
 
-</div><!--end of main container of the page-->
+
+</div>
+</div>
   {% block scripts %}
-
+ 
   {% endblock %}
-   {% endblock %}
-   
+  {% endblock %}
+
+
