--- a/allifmaaladminapp/templates/allifmaaladminapp/base/sidetopnavbars/sidetopnavbars.html
+++ b/allifmaaladminapp/templates/allifmaaladminapp/base/sidetopnavbars/sidetopnavbars.html
@@ -20,8 +20,9 @@
         
         <li><a class="dropdown-item" href="{% url 'allifmaaladminapp:adminappHome' user_var glblslug %}">Allifmaal</a></li>
 
-        
+
         <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonSectors' user_var glblslug %}">Sectors</a></li>
+        <li><a class="dropdown-item" href="{% url 'allifmaaladminapp:adminappUsers' user_var glblslug %}">Users</a></li>
         
        
         <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonDocsFormat' user_var glblslug %}">Doc Formats</a></li>
