--- a/allifmaalcommonapp/templates/allifmaalcommonapp/scopes/scopes.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/scopes/scopes.html
@@ -63,7 +63,7 @@
         
         {% for item in allifqueryset %} 
         <tr data-id="{{item.id}}">
-        <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonSectorDetails' item.id user_var glblslug %}">{{item.name}}</a></td>
+        <td class="allif-fix-table-col"><a class="allif-table-links" href="">{{item.name}}</a></td>
         <td>{{item.comments}}</td>
         <td>{{item.owner}}</td>
         <td>{{item.date|date:'d/m/Y'}}</td>
@@ -73,7 +73,7 @@
             <a href="#" onclick="showDropdown(event, this)" class="dropdown-toggle dropdown-item" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Options</a>
             <div class="dropdown-content">
               <a href="{% url 'allifmaalcommonapp:commonEditCompanyScope' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
-              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete</a>
+              <a href="#" onclick="confirmDelete(this)" class="dropdown-item" id="allif-table-drop-item-link-delete">Delete Item </a>
               
             </div>
           </div>
@@ -82,7 +82,6 @@
             <a href="{% url 'allifmaalcommonapp:commonAddCompanyScope' user_var glblslug %}" id="allif-confirm-delete">No</a><span><strong> | </strong></span>
             <a href="{% url 'allifmaalcommonapp:commonDeleteCompanyScope' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
           </div>
-
 
 
 
