--- a/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/add-division.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/add-division.html
@@ -83,17 +83,17 @@
       <tbody>
       
       <tr>
-        <td class="allif-fix-table-col">Division Name</td>
+        <td>Division Name</td>
         <td>{{form.division}}</td>
     
         </tr>
         <tr>
-          <td class="allif-fix-table-col">Phone</td>
+          <td>Phone</td>
           <td>{{form.phone}}</td>
       
           </tr>
           <tr>
-            <td class="allif-fix-table-col">Email</td>
+            <td>Email</td>
             <td>{{form.email}}</td>
         
             </tr>
@@ -113,17 +113,17 @@
        <table class="table table-layout">
         <tbody>
           <tr>
-            <td class="allif-fix-table-col">Address</td>
+            <td>Address</td>
             <td>{{form.address}}</td>
         
             </tr>
             <tr>
-              <td class="allif-fix-table-col">City</td>
+              <td>City</td>
               <td>{{form.city}}</td>
           
               </tr>
               <tr>
-                <td class="allif-fix-table-col">P.O.Box</td>
+                <td>P.O.Box</td>
                 <td>{{form.pobox}}</td>
             
                 </tr>
@@ -141,12 +141,12 @@
        <table class="table table-layout">
         <tbody>
           <tr>
-            <td class="allif-fix-table-col">Comments</td>
+            <td>Comments</td>
             <td>{{form.comments}}</td>
         
             </tr>
             <tr>
-              <td class="allif-fix-table-col">Save</td>
+              <td></td>
               <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
           
               </tr>
