--- a/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branch-details.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/branches/branch-details.html
@@ -250,7 +250,7 @@
               
                 <tr>
                   <td >
-                    <a href="{% url 'allifmaalcommonapp:commonCompanyDetails' allifquery.id user_var glblslug %}" class="allif-table-links">
+                    <a href="{% url 'allifmaalcommonapp:commonEditEntityByClients' allifquery.id user_var glblslug %}" class="allif-table-links">
                    {{allifquery.company}}
                     </a>
                   </td>
