--- a/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/add-division.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/divisions/add-division.html
@@ -21,37 +21,9 @@
 
 <a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
 <a href="{% url 'allifmaalcommonapp:commonAddDivision' user_var glblslug %}">Add Divison</a>
-<a href="{% url 'allifmaalcommonapp:commonhrm' user_var glblslug %}">HRM</a>
-<a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}">Suppliers</a>
-<a href="{% url 'allifmaalcommonapp:commonHome' user_var glblslug %}">Home</a>
-<a href="{% url 'allifmaalcommonapp:commonCompanyDetailsForClients' user_var glblslug %}">Company</a>
 
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Navigate
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-    <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonAssets' user_var glblslug %}">Assets</a></li>
-    <li><a class="dropdown-item" href="{% url 'allifmaalcommonapp:commonExpenses' user_var glblslug %}">Expenses</a></li>
-    
-    </div>
-  </ul>
-</div>
-<a href="{% url 'allifmaalcommonapp:commonTasks' user_var glblslug %}">Tasks</a>
-<div class="dropdown allifmaal-content-dropdown">
-  <a class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-  Banks
-  </a>
-  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-    <div class="content-dropdown-menu">
-    <li><a  class="dropdown-item" href="{% url 'allifmaalcommonapp:commonBanks' user_var glblslug %}">Banks</a></li>
-    <li><a  class="dropdown-item" href="{% url 'allifmaalcommonapp:commonBankShareholderDeposits' user_var glblslug %}">Deposits</a>
-      </li>
-    <li><a href="{% url 'allifmaalcommonapp:commonBankWithdrawals' user_var glblslug %}">Withdrawals</a></li>
-    </div>
-  </ul>
-</div>
+<a href="{% url 'allifmaalcommonapp:commonDivisions' user_var glblslug %}">Divisions</a>
+
 <a href="{% url 'allifmaalcommonapp:commonCustomers' user_var glblslug %}">Customers</a>
 <a href="{% url 'allifmaalcommonapp:commonSuppliers' user_var glblslug %}">Suppliers</a>
 </div>
@@ -68,7 +40,7 @@
 
 
 <div class="row mt-12"> <!--start....table row-->
-  <div class="table-details-content-description">{{allifquery}} Details</div>
+  <div class="table-details-content-description">Add/Edit New Division</div>
   <form method='POST' action=''>{% csrf_token %}
   <div class="col-md-12"> <!--start....table column-->
   <div class="allif-scroll-table">
@@ -83,17 +55,17 @@
       <tbody>
       
       <tr>
-        <td>Division Name</td>
+        <td class="allif-fix-table-col">Division Name</td>
         <td>{{form.division}}</td>
     
         </tr>
         <tr>
-          <td>Phone</td>
+          <td class="allif-fix-table-col">Phone</td>
           <td>{{form.phone}}</td>
       
           </tr>
           <tr>
-            <td>Email</td>
+            <td class="allif-fix-table-col">Email</td>
             <td>{{form.email}}</td>
         
             </tr>
@@ -113,17 +85,17 @@
        <table class="table table-layout">
         <tbody>
           <tr>
-            <td>Address</td>
+            <td class="allif-fix-table-col">Address</td>
             <td>{{form.address}}</td>
         
             </tr>
             <tr>
-              <td>City</td>
+              <td class="allif-fix-table-col">City</td>
               <td>{{form.city}}</td>
           
               </tr>
               <tr>
-                <td>P.O.Box</td>
+                <td class="allif-fix-table-col">P.O.Box</td>
                 <td>{{form.pobox}}</td>
             
                 </tr>
@@ -141,12 +113,12 @@
        <table class="table table-layout">
         <tbody>
           <tr>
-            <td>Comments</td>
+            <td class="allif-fix-table-col">Comments</td>
             <td>{{form.comments}}</td>
         
             </tr>
             <tr>
-              <td></td>
+              <td class="allif-fix-table-col"></td>
               <td> <input type="submit" value='Save' class="btn btn-success allifmaal-submit-btn"></td>
           
               </tr>
